--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --host 127.0.0.1  --port 8894"
   },
   "repository": {
     "type": "git",
@@ -18,13 +18,20 @@
   "homepage": "https://github.com/dragon8github/spa#readme",
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-loader": "^6.3.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^1.9.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.23.0"
   }
 }
