--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^1.9.1",
     "style-loader": "^0.13.1",
+    "taffy": "^2.6.2",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
